--- a/angular.json
+++ b/angular.json
@@ -83,10 +83,13 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
+               "src/favicon.ico",
+               "src/assets",
               {
-                "glob": "**/*",
-                "input": "public"
-              }
+                  "glob": "_redirects",
+                  "input": "src/assets",
+                  "output": "/"
+                }
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
