--- a/angular.json
+++ b/angular.json
@@ -24,15 +24,14 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
-            "styles": [
-              "@angular/material/prebuilt-themes/azure-blue.css",
-              "src/styles.scss"
-            ]
+                  "src/favicon.ico",
+                  "src/assets",
+                  {
+                    "glob": "_redirects",
+                    "input": "src/assets",
+                    "output": "/"
+                  }
+                ]
           },
           "configurations": {
             "production": {
