--- a/angular.json
+++ b/angular.json
@@ -18,23 +18,25 @@
           "builder": "@angular/build:application",
           "options": {
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "index": "src/index.html",
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-                  "src/favicon.ico",
-                  "src/assets",
-                  {
-                    "glob": "_redirects",
-                    "input": "src/assets",
-                    "output": "/"
-                  }
-                ]
+              "src/favicon.ico",
+              "src/assets",
+              {
+                "glob": "_redirects",
+                "input": "src/assets",
+                "output": "/"
+              }
+            ],
+            "styles": ["src/styles.scss"],
+            "scripts": []
           },
           "configurations": {
             "production": {
+              "outputHashing": "all",
               "budgets": [
                 {
                   "type": "initial",
@@ -46,8 +48,7 @@
                   "maximumWarning": "4kB",
                   "maximumError": "8kB"
                 }
-              ],
-              "outputHashing": "all"
+              ]
             },
             "development": {
               "optimization": false,
@@ -75,20 +76,17 @@
         "test": {
           "builder": "@angular/build:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-               "src/favicon.ico",
-               "src/assets",
+              "src/favicon.ico",
+              "src/assets",
               {
-                  "glob": "_redirects",
-                  "input": "src/assets",
-                  "output": "/"
-                }
+                "glob": "_redirects",
+                "input": "src/assets",
+                "output": "/"
+              }
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
